<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:descendantFocusability="beforeDescendants" >

    <ImageView
        android:id="@+id/drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:src="@drawable/drag" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toLeftOf="@+id/item_delete"
        android:layout_toRightOf="@+id/drag_handle" >

        <TextView
            android:id="@+id/item_dictionary_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/dictionary_name" />

        <TextView
            android:id="@+id/item_dictionary_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/dictionary_size"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/item_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/item_hide"
        android:src="?trash" />

    <ToggleButton
        android:id="@+id/item_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textOff="@string/dictionary_hide"
        android:textOn="@string/dictionary_show" />

</RelativeLayout>