<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:descendantFocusability="beforeDescendants" >

    <TextView
        android:id="@+id/item_dictionary_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:text="@string/dictionary_name" />

    <Button
        android:id="@+id/item_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:focusable="false"
        android:text="@string/dictionary_download" />

    <TextView
        android:id="@+id/item_dictionary_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="22dp"
        android:layout_toLeftOf="@+id/item_download"
        android:text="@string/dictionary_size"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/download_url_hidden"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

</RelativeLayout>