<?xml version="1.0" encoding="utf-8"?>
<!--
	Open Manager, an open source file manager for the Android system
    Copyright (C) 2009, 2010  Joe Berria <nexesdevelopment@gmail.com>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>. 
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="#e8e8e8" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dip"
                    android:text="@string/show_hidden_file"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dip"
                    android:paddingTop="3dip"
                    android:singleLine="false"
                    android:text="@string/show_hidden_file_desc"
                    android:textColor="@color/black" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/setting_hidden_box"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:checked="false"
                android:padding="3dp" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/header_divider" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/header_divider" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:text="排序"
            android:textColor="@color/black" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/header_divider" />

        <TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dip"
                    android:text="@string/sort_method"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dip"
                    android:paddingTop="3dip"
                    android:singleLine="false"
                    android:text="@string/sort_method_desc"
                    android:textColor="@color/black" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/settings_sort_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:background="@color/white"
                android:src="@drawable/more" />
        </TableRow>
    </TableLayout>

</ScrollView>